# ros2_switching_mode

./: README.md
bobo_style/bobo_style_launch/: CMakeLists.txt  package.xml
bobo_style/bobo_style_launch/src/: switch_mode.cpp
nodebynode /mode_switch_interfaces/: package.xml
nodebynode /mode_switch_interfaces/msg/: ModeSwitch.msg
nodebynode /mode_switch_interfaces/srv/: ModeSwitch.srv
nodebynode /mode_switch_server/: CMakeLists.txt
nodebynode /mode_switch_server/launch/: mapping_launch.py  remapping_launch.py
nodebynode /mode_switch_server/src/: lifecycle_kill.cpp
raw_codes/mode_switch_interfaces/: CMakeLists.txt
raw_codes/mode_switch_server/: package.xml
raw_codes/mode_switch_server/launch/: navigation_launch.py
raw_codes/mode_switch_server/src/: lifecycle_switch.cpp  mode_switch_server.cpp
raw_codes/switch_mode_launch/: CMakeLists.txt
raw_codes/switch_mode_launch/launch/: mapping.launch.py  nav2.launch.py  remapping.launch.py  switch_mode.launch.py  test_change_switch.launch.py
switch_mode_launch/: package.xml
switch_mode_launch/launch/: test_jumper.py
switch_mode_launch/scripts/: switch_mode.py  which_map_server.py
